--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
 		<title>My Webpage!</title>
 	</head>
 	<body>
-		Hello, World!, Suckers!!!
+		Hello, World!, Suckers!!! Hi Friend.
 	</body>
 </html>
