--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>
-			My Webpage!
-		</title>
+		<title>My Webpage!</title>
 	</head>
 	<body>
-		Hello, World!, Suckers!!! Hi Friend.
+		Hello, World!
 	</body>
 </html>
